specs/001-typescript-to-zig-native/examples/valid/string-array-stdlib.ts
let nums: int[] = [];

if (String.contains("hello", "ell") && String.startsWith("hello", "he") && !String.isEmpty("x") && Array.isEmpty(nums)) {
  console.log("ok");
}
