specs/001-typescript-to-zig-native/examples/invalid/array-element-type.ts
let nums: int[] = [1, "two"];
